# my-api

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/admin/: pricing.py  providers.py  stats.py  ui.py
app/api/v1/: openai_compat.py
app/core/: auth.py  billing.py  config.py  database.py  load_balancer.py  timezone.py  token_counter.py
app/models/: entities.py
app/schemas/: admin.py  stats.py
app/services/: provider_client.py  usage_service.py
